# coral

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  FIX_SUMMARY.md  Makefile  README.md  SESSION_STATE.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classcoral_1_1_connection-members.html  classcoral_1_1_connection.html  classcoral_1_1_connection.js  classcoral_1_1_network-members.html  classcoral_1_1_network.html  classcoral_1_1_network.js  classcoral_1_1_node_object-members.html  classcoral_1_1_node_object.html  classcoral_1_1_node_object.js  classcoral_1_1_task_observer-members.html  classcoral_1_1_task_observer.html  classcoral_1_1_task_observer.js  classes.html  context.md  coral_8h.html  coral_8h.js  coral_8h_source.html  coral__implementation_8cc.html  coral__implementation_8cc_source.html  coral__implementation_8h.html  coral__implementation_8h.js  coral__implementation_8h_source.html  coral__network_8h.html  coral__network_8h.js  coral__network_8h_source.html  coral__network__implementation_8cc.html  coral__network__implementation_8cc_source.html  (+96 more)
.devcontainer/: devcontainer.json
.github/workflows/: doxygen.yml  tests.yml
backends/dealii/: CMakeLists.txt
backends/dealii/include/: laplace.h  poisson.h  register_types.h  utilities.h
backends/dealii/src/: backend_main.cc  plugin_dealii.cc  poisson.cc
backends/dealii/tests/: CMakeLists.txt  TEST_OUTPUT_USAGE.md  dealii_examples.cc  dealii_mpi.cc  modules.cc  network.cc  node_object_tests.cc  plugin_smoke_test.cc  serialize.cc  test_utils.h  trivial_types.cc
core/: CMakeLists.txt
core/include/: coral.h  coral_implementation.h  coral_log.h  coral_logger.h  coral_network.h  coral_network_implementation.h  coral_plugin.h  slog.h  type_name.h
core/include/slog/: slog.h
core/source/: backend_main.cc  coral_implementation.cc  coral_network_implementation.cc
core/tests/: CMakeLists.txt  serialize.cc  trivial_types.cc
dealii_backend/: .gitignore  CMakeLists.txt
dealii_backend/gtests/: CMakeLists.txt  dealii_examples.cc  dealii_types.cc  network.cc  node_object_tests.cc  node_types.cc  serialize.cc  trivial_types.cc
dealii_backend/include/: coral.h  coral_network.h  register_types.h  type_name.h
dealii_backend/source/: dummy.cc  main.cc  node_object.cc
dealii_backend/taskflow/core/: task.hpp
dealii_backend/test_files/: editor-state.json  mwe.json
doc/: Doxyfile
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  startup.sh
gtests/: CMakeLists.txt  dealii_examples.cc  dealii_types.cc  failing.cc  function_types.cc  higher_order_functions.cc  main.cc  modules.cc  network.cc  node_object_tests.cc  node_types.cc  serialize.cc  test_utils.h  trivial_types.cc
gui/: CMakeLists.txt
gui/editor/: CMakeLists.txt
gui/editor/include/coral_editor/: node_editor_types.h
gui/editor/source/: node_editor_main.cc
gui/manipulator/: CMakeLists.txt
gui/manipulator/imgui/misc/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
gui/manipulator/include/coral_manipulator/: manipulator.h
gui/manipulator/source/: main.cpp  manipulator.cpp
include/: coral.h  coral_implementation.h  coral_network.h  coral_network_implementation.h  coral_utilities.h  register_types.h  type_name.h  utils.h
issues/: 041-use-qualified_id-to-generate-node-status-files.md
pybind_examples/: README.md
pybind_examples/dealii-first/: CMakeLists.txt  example_01.py  register.cpp
pybind_examples/gil_release/: CMakeLists.txt  main_primes.py  primes.cpp
pybind_examples/mwe/: CMakeLists.txt  mwe.py  register.cpp
pybind_examples/no-pass-thru/: CMakeLists.txt  no-pass-thry.py  register.cpp
pybind_examples/virtual/: CMakeLists.txt  main_virtual.py  virtual.cpp
room-builder/: floorplan.html  load-obj.html  parser_scene_to_phiflow.py  scene3d.js  script.js  test.json
scripts/: indent  new-issue-doc.sh
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_20.js  all_21.js  all_22.js  all_24.js  all_26.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_15.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  (+126 more)
source/: main.cc  node_object.cc  test.cc
source/slog/: slog.c
src/: App.vue  package-lock.json
src/node-editor/: index.js
src/node-editor/components/: consumptionComponent.js  controlComponent.js  deviceComponent.js  inputComponent.js  numComponent.js  outputComponents.js  roomComponent.js  simulationComponent.js
src/node-editor/controls/: canvasControl.js  canvasControl.vue  consumptionControl.js  consumptionControl.vue  deviceControl.js  deviceControl.vue  numControl.js  numControl.vue
src/node-editor/sockets/: sockets.js
standalones/: CMakeLists.txt
standalones/poisson/: CMakeLists.txt  PARAMETERS.md  parameters_file.json  parameters_generator.json  poisson.cc
standalones/poisson_mpi/: CMakeLists.txt  PARAMETERS.md  parameters_file.json  parameters_generator.json  poisson_mpi.cc
test_files/: PoissonSolver.json  PoissonSolverSolution.json  SetSum.json  conv.py  graph-named.json  graph-no-name.json  hyper_cube_node.json  laplace.json  mwe.json  mwe_imgui.json  networknode-noarguments.json  networknode-notwork.json  networknode-order1.json  networknode-order2.json  plugin.json  qualified_id.json  qualified_id_repeated.json  step-0_network.json  test_grid.vtu  vtk-gen1.json  vtk-gen2.json  vtk-gen3.json  vtk-ko.json  vtk-ok.json  vtk-single.json
tools/: CMakeLists.txt
tools/src/: coral_dump_registry.cc
